kubernetes/manifests/alpine-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
spec:
  containers:
    - name: alpine
      image: alpine
      command:
        - sleep
        - "3600"
      imagePullPolicy: Always
  restartPolicy: Always
