kubernetes/manifests/ingress-longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-longhorn-web
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.baltbereg.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  ingressClassName: nginx
